# gmfm

./: .gitignore  .nfs934639f7c7f27aa400000e4b  CODE_STYLE.md  pyproject.toml  requirements.txt  slurm-729185.out
gmfm/: run.py  run_gmm.py  run_particles.py
gmfm/config/: config.py  setup.py  sweep.py
gmfm/data/: adv.py  clevrer.py  dataloader.py  get.py  hoam.py  image.py  lanl.py  lz9.py  toy.py  turb.py  vlasov2.py  wave.py
gmfm/io/: load.py  misc.py  save.py
gmfm/loss/: bandwidth.py  get.py  gm.py  rff.py  spatial.py  spline.py
gmfm/net/: get.py  mlp.py  unet.py
gmfm/test/: eval.py  integrate.py  metrics.py  plot.py  test.py
gmfm/train/: adam.py  latent.py  train.py
gmfm/utils/: plot.py  style.py  tools.py
